src/test/ui/closures/issue-80313-mutable-borrow-in-move-closure.stderr
error[E0596]: cannot borrow `callback` as mutable, as it is not declared as mutable
  --> $DIR/issue-80313-mutable-borrow-in-move-closure.rs:6:5
   |
LL |     let callback = move || {
   |         -------- help: consider changing this to be mutable: `mut callback`
LL |         &mut my_var;
   |              ------ calling `callback` requires mutable binding due to possible mutation of `my_var`
LL |     };
LL |     callback();
   |     ^^^^^^^^ cannot borrow as mutable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
